...
enum AwesomeRepositoryBrick: BrickBuilderType {
    case Title, Description, Favorite
    case LineBreak

    case SearchBar

    case Search, Repository

    static let reuseIdentifiers = [Repository].map { component -> String in
        return component.brickName
    }

    static let reuseSearchIdentifiers = [Search].map { component -> String in
...
