...
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="CFN-92-7WQ" id="Zyc-sy-Xq5"/>
                                    <outlet property="delegate" destination="CFN-92-7WQ" id="G1c-lj-u6W"/>
                                </connections>
                            </tableView>
                            <searchBar contentMode="redraw" text="" placeholder="search in libs" translatesAutoresizingMaskIntoConstraints="NO" id="k6n-on-Nq0">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="ugZ-Lh-Gah"/>
                                </constraints>
                                <color key="barTintColor" red="0.38823529410000002" green="0.1843137255" blue="0.36862745099999999" alpha="1" colorSpace="calibratedRGB"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
...
